Fix duplicate titles

--- a/404.md
+++ b/404.md
@@ -1,8 +1,7 @@
 ---
 layout: post
 permalink: /404.html
+title: 404 - Under Construction
 ---
 
-# Under construction
-
-The page is still under construction. Expect this link to be working within a week.
+If this page is valid, it is still under construction. Expect this link to be working within a week.
